feat: Insignia Gui
bugfix:
Insignia work facing all directions